--- a/hello.html
+++ b/hello.html
@@ -3,8 +3,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My Webpage!</title>
+    <title>Harvard Lecture</title>
   </head>
   <body>
-    hello world! Hello again! Hello a third time!  </body>
+    hello world! Hello again! Hello a third time! hi  </body>
 </html>
